<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".telaParticipante5">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/valor_da_aposta" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Criar bolao"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/gren4"
        android:text="@string/apostar_agora" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp"
        app:srcCompat="@drawable/img_5" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="200dp"
        app:srcCompat="@drawable/img_7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="299dp"
        android:layout_marginTop="200dp"
        app:srcCompat="@drawable/img_8" />

    <Button

        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="570dp"
        android:layout_marginBottom="70dp"
        android:text="Voltar" />
    <TextView
        android:id="@+id/text5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/cart_o" />

    <TextView
        android:id="@+id/senha3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/senha" />
</RelativeLayout>
