<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrincipalActivity">


    <LinearLayout
        android:id="@+id/layoutMargem"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@color/yellow"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/bola"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo2"
            android:src="@drawable/ic_baseline_sports_soccer_24"
            app:tint="@color/gren4" />


        <ImageView
            android:id="@+id/Participante"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo1"
            android:src="@drawable/ic_baseline_person_add_24"
            app:tint="@color/gren4" />


        <ImageView
            android:id="@+id/pagamento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo3"
            android:src="@drawable/ic_baseline_attach_money_24"
            app:tint="@color/gren4" />
    </LinearLayout>


    <TextView
        android:id="@+id/Lancebol"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/layoutMargem"
        android:layout_marginTop="1dp"
        android:background="@color/cardview_light_background" />

    <TextView
        android:id="@+id/Aposta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-25dp"
        android:padding="80dp"
        android:text="Aposta"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="75dp"
        android:padding="80dp"
        android:text="Usuário"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Placar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="209dp"
        android:padding="80dp"
        android:text="Placar"
        android:textSize="15sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@color/black"
        android:backgroundTint="@color/white"
        android:elevation="20dp"
        android:gravity="center"
        android:text="@string/bem_vindo_ao_lancebol"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="290dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="200dp"
        app:srcCompat="@drawable/img" />





</RelativeLayout>
